# RIOT

./: .gitignore  CMakeLists.txt  Makefile.cflags  Makefile.dep  Makefile.include  Makefile.pseudomodules
boards/: CMakeLists.txt
boards/airfy-beacon/: Makefile.dep  Makefile.features  Makefile.include
boards/arduino-due/: Makefile.include
boards/iot-lab_M3/: Makefile.include
boards/mchck/: Makefile.include  board.c
boards/msba2/: Makefile.include  board.c
boards/msba2-common/: board_common_init.c  lpc2387-timer3.c
boards/msba2-old/: board_init.c
boards/msbiot/: Makefile.include
boards/mulle/: Makefile.dep  Makefile.features  Makefile.include  board.c  board_config.c  devicemap.c  system_MK60D10.c
boards/native/: CMakeLists.txt
boards/openlabs-kw41z-mini/: CMakeLists.txt
boards/openmote/: board.c
boards/pba-d-01-kw01/: Makefile.features  Makefile.include
boards/pba-d-01-kw2x/: Makefile.features  Makefile.include
boards/pca10000/: Makefile.include
boards/pca10005/: Makefile.include
boards/samr21-xpro/: Makefile.include
boards/stm32f0discovery/: Makefile.include
boards/stm32f3discovery/: Makefile.features  Makefile.include
boards/stm32f4discovery/: Makefile.include
boards/udoo/: Makefile.include
boards/xmc2go/: Makefile.include  board.c
boards/yunjia-nrf51822/: Makefile.features  Makefile.include
core/: CMakeLists.txt  atomic.c  tim.c
core/include/: atomic.h  hwtimer.h
cpu/: CMakeLists.txt
cpu/arm7_common/: Makefile  Makefile.include  atomic_arch.c  common.s  irq_arch.c  reboot_arch.c  thread_arch.c
cpu/cortex-m0_common/: atomic_arch.c
cpu/cortex-m3_common/: atomic_arch.c
cpu/cortex-m4_common/: atomic_arch.c
cpu/cortexm_common/: CMakeLists.txt
cpu/k20/: Makefile  Makefile.include  cpu.c  doc.txt  sim.c  startup.c
cpu/k60/: Makefile.include  core-clocks.c  cpu.c  fault-handlers.c  hwtimer_arch.c  interrupt-vector-k60.c  interrupt_vector.c  io_arch.c  lpm_arch.c  reboot_arch.c  rtc.c  ssp.c  startup.c  syscalls.c  system_MK60D10.c
cpu/kinetis/: CMakeLists.txt
cpu/kinetis_common/: Makefile.include  adc.c  cpuid.c  fault_handlers.c  gpio.c  hwtimer_arch.c  i2c.c  mcg.c  pwm.c  random_rnga.c  random_rngb.c  rtc.c  spi.c  startup.c  timer.c  uart.c  wdog.c
cpu/kw0x/: Makefile.include  cpu.c  kw01z128_linkerscript.ld  startup.c
cpu/kw2x/: Makefile.include  kw22d512_linkerscript.ld  startup.c
cpu/lpc2387/: Makefile  Makefile.include  cpu.c  lpc2387_linkerscript.ld  startup.c  syscalls.c
cpu/msp430-common/: atomic.c  msp430-main.c
cpu/native/: CMakeLists.txt
cpu/nrf51822/: Makefile  hwtimer_arch.c  startup.c
cpu/sam3x8e/: startup.c
cpu/stm32f4/: startup.c
cpu/xmc1000/: cpu.c  hwtimer_arch.c  io_arch.c  reboot_arch.c  startup.c  syscalls.c  xmc1100_linkerscript.ld
drivers/: CMakeLists.txt  Makefile  Makefile.dep  Makefile.include
drivers/at86rf231/: at86rf231.c  at86rf231_rx.c  at86rf231_spi.c  at86rf231_tx.c
drivers/enc28j60/: Makefile  enc28j60.c  enc28j60_internal.c
drivers/fxos8700/: CMakeLists.txt
drivers/ina220/: ina220.c
drivers/include/: enc28j60.h  ina220.h  l298n.h  l3g4200d.h  mtd_spi_nor.h  nvram-spi.h  nvram.h  pdc8544.h  xbee.h
drivers/l298n/: l298n.c
drivers/l3g4200d/: l3g4200d.c
drivers/mtd_spi_nor/: mtd_spi_nor.c
drivers/nvram/: nvram-vfs.c
drivers/nvram_spi/: nvram-spi.c
drivers/pdc8544/: Makefile  example-code.c-old  pdc8544.c
drivers/periph_common/: CMakeLists.txt
drivers/xbee/: xbee.c  xbee.tmp
examples/saul/: CMakeLists.txt
examples/timer_periodic_wakeup/: CMakeLists.txt
sys/: CMakeLists.txt  Makefile  Makefile.include
sys/analog_util/: CMakeLists.txt
sys/app_metadata/: CMakeLists.txt
sys/auto_init/: CMakeLists.txt  auto_init.c
sys/base64/: CMakeLists.txt
sys/benchmark/: CMakeLists.txt
sys/bitfield/: CMakeLists.txt
sys/bloom/: CMakeLists.txt
sys/bus/: CMakeLists.txt
sys/can/: CMakeLists.txt
sys/cb_mux/: CMakeLists.txt
sys/checksum/: CMakeLists.txt
sys/clif/: CMakeLists.txt
sys/color/: CMakeLists.txt
sys/congure/: CMakeLists.txt
sys/crypto/: CMakeLists.txt
sys/div/: CMakeLists.txt
sys/ecc/: CMakeLists.txt
sys/eepreg/: CMakeLists.txt
sys/entropy_source/: CMakeLists.txt
sys/event/: CMakeLists.txt
sys/evtimer/: CMakeLists.txt
sys/fmt/: CMakeLists.txt
sys/frac/: CMakeLists.txt
sys/fs/: CMakeLists.txt
sys/fuzzing/: CMakeLists.txt
sys/hashes/: CMakeLists.txt
sys/include/: base64.h  shell_commands.h  tim.h  vfs.h
sys/iolist/: CMakeLists.txt
sys/isrpipe/: CMakeLists.txt
sys/log/: CMakeLists.txt
sys/luid/: CMakeLists.txt
sys/malloc_thread_safe/: CMakeLists.txt
sys/matstat/: CMakeLists.txt  matstat.c
sys/memarray/: CMakeLists.txt
sys/mineplex/: CMakeLists.txt
sys/newlib/: syscalls.c
sys/newlib_syscalls_default/: CMakeLists.txt
sys/od/: CMakeLists.txt
sys/oneway-malloc/: CMakeLists.txt
sys/phydat/: CMakeLists.txt
sys/pipe/: CMakeLists.txt
sys/pm_layered/: CMakeLists.txt
sys/posix/: CMakeLists.txt
sys/progress_bar/: CMakeLists.txt
sys/ps/: CMakeLists.txt
sys/puf_sram/: CMakeLists.txt
sys/quad_math/: CMakeLists.txt
sys/random/: CMakeLists.txt
sys/saul_reg/: CMakeLists.txt
sys/schedstatistics/: CMakeLists.txt
sys/sema/: CMakeLists.txt
sys/sema_inv/: CMakeLists.txt
sys/seq/: CMakeLists.txt
sys/shell/: CMakeLists.txt
sys/ssp/: CMakeLists.txt
sys/stdio_null/: CMakeLists.txt
sys/stdio_rtt/: CMakeLists.txt
sys/stdio_semihosting/: CMakeLists.txt
sys/stdio_uart/: CMakeLists.txt
sys/suit/: CMakeLists.txt
sys/test_utils/: CMakeLists.txt
sys/tim/: tim.c  tim.h  tim_arch.h  timer.h
sys/timex/: CMakeLists.txt
sys/trace/: CMakeLists.txt
sys/transceiver/: transceiver.c
sys/trickle/: CMakeLists.txt
sys/tsrb/: CMakeLists.txt
sys/uart_stdio/: uart_stdio.c
sys/universal_address/: CMakeLists.txt
sys/uri_parser/: CMakeLists.txt
sys/usb_board_reset/: CMakeLists.txt
sys/uuid/: CMakeLists.txt
sys/vfs/: CMakeLists.txt  vfs.c
sys/xtimer/: CMakeLists.txt
tests/bench_sizeof_coretypes/: CMakeLists.txt
tests/congure_test/: CMakeLists.txt
(+722 files in other folders)
