if(NOT BOARD)
  message(FATAL_ERROR "BOARD is not defined")
endif()
set(RIOT_BOARD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/${BOARD})
add_library(riot_board INTERFACE)
target_include_directories(riot_board INTERFACE include)
add_subdirectory(${RIOT_BOARD_DIR})
target_link_libraries(riot_board INTERFACE riot_board_${BOARD})
