add_library(riot_core STATIC
  assert.c
  atomic_c11.c
  atomic_sync.c
  bitarithm.c
  clist.c
  cond.c
  init.c
  lifo.c
  mbox.c
  msg.c
  msg_bus.c
  mutex.c
  panic.c
  priority_queue.c
  ringbuffer.c
  rmutex.c
  sched.c
  thread.c
  thread_flags.c
  include/assert.h
  include/bitarithm.h
  include/cib.h
  include/clist.h
  include/cond.h
  include/debug.h
  include/irq.h
  include/kernel_defines.h
  include/kernel_init.h
  include/lifo.h
  include/list.h
  include/log.h
  include/macros/units.h
  include/macros/xtstr.h
  include/mbox.h
  include/msg.h
  include/msg_bus.h
  include/mutex.h
  include/native_sched.h
  include/panic.h
  include/priority_queue.h
  include/ringbuffer.h
  include/rmutex.h
  include/sched.h
  include/thread.h
  include/thread_flags.h
  )
target_include_directories(riot_core PUBLIC include)
target_link_libraries(riot_core PUBLIC
  RIOT::flags
  RIOT::cpu
)
add_library(RIOT::core ALIAS riot_core)
