add_riot_module(entropy_source entropy_source.c)
add_riot_module(entropy_source_adc_noise adc_noise/adc_noise.c)
add_riot_module(entropy_source_zero_entropy zero_entropy/zero_entropy.c)

# TODO Configuration
#set(ENTROPY_SOURCE_ZERO_HMIN 58982 CACHE STRING "Estimated entropy per sample (byte)")
#mark_as_advanced(ENTROPY_SOURCE_ZERO_HMIN)
#option(ENTROPY_SOURCE_ZERO_HEALTH_TEST "Enable health test" ON)
#mark_as_advanced(ENTROPY_SOURCE_ZERO_HEALTH_TEST)
#option(ENTROPY_SOURCE_ZERO_COND "Enable conditioning" OFF)
#mark_as_advanced(ENTROPY_SOURCE_ZERO_COND)
#if (ENTROPY_SOURCE_ZERO_COND)
#  target_compile_definitions(riot_module_entropy_source_zero_entropy PRIVATE "CONFIG_ENTROPY_SOURCE_ZERO_COND")
#endif()
#set(ENTROPY_SOURCE_ADC_RES 10 CACHE STRING "ADC default sampling resolution (bits). Not all platforms support every value.")
#mark_as_advanced(ENTROPY_SOURCE_ADC_RES)
#target_compile_definitions(riot_module_entropy_source_adc_noise PRIVATE "CONFIG_ENTROPY_SOURCE_ADC_RES_${ENTROPY_SOURCE_ADC_RES}BIT")
